# -CC0E5A-Algoritmos-y-Estructuras-de-Datos-Avanzados

./: .gitignore  e -i HEAD~5
ConsistentHash/: ConsistentHash.csproj  Program.cs
ConsistentHash/src/: BloomFilter.cs  ConsistentHash.cs  DSU.cs  MurmuHash.cs  PerfectHash.cs  Treap.cs
EjercicosResuleltos/KNearestNeight/: DBSCAN.ipynb  OPTICS.ipynb  Template.md  d_heap.py  optics.py
GenerateTest/: a  in.txt  mapa.cpp  prueba.cpp
Heap/: Heap.hpp  MedianHeap.hpp  a  heap.hpp  main.cpp
Project1/ConsistentHash/: ConsistentHash.csproj  Program.cs
Project3/: README.md  ]  a  btree_node.cpp  entry.hpp  help.cpp  knn_search.hpp  m-tree.h  m_tree.cpp  m_tree.hpp  m_tree_service.cpp  prueba.cpp  prueba2.cpp  prueba3.cpp  template.cpp  utils.hpp
Project3/Doc/: document.tex
Project3/metrics/: README.md  command  compilar_tesis.sh  detector_simple.cpp  ejecutar_multi_capacidad.sh  graficar_multi_capacidad.py  resultados_multi_capacidad.csv  tesis.tex
Project3/src/: CMakeLists.txt  config.h  entry.cpp  entry.h  entry.hpp  m_tree.cpp  m_tree.h  m_tree.hpp  main.cpp  utils.h  utils.hpp
Project3/test/: README.md  test_executable  test_m_tree  test_m_tree.cpp
Proyect1/ConsistentHash.Tests/: ConsistentHash.Tests.csproj  ConsistentHashTest.cs  PerfectHashTest.cs
Proyect2/: README.md  RunTest.py  TesAlgorithm.ipynb
Proyect2/JoseTello/: splay_tree.py
Proyect2/ProjectJoseTello/: main.ipynb
Proyect2/ScapegoatTree/: Program.cs
Proyect2/ScapegoatTree.Tests/: ScapegoatTree.Tests.csproj  ScapegoatTree.cs  random_case.txt  worst_case.txt
Treap/: Treap.hpp
(+30 files in other folders)
